--- a/Task_1_Final.html
+++ b/Task_1_Final.html
@@ -25,17 +25,17 @@
     </div>
 
     <!-- 主標題 -->
-    <header> Welcome to my home </header>
+    <header> Welcome to MyHome </header>
     <main>
         <!-- 主內容容器 -->
         <div class="container_card">
             <!-- promote -->
             <div class="promote_container">
-                <div class="promote">
+                <div class="promote1">
                     <img class="promote_image" src="./Task1pic.jpg" alt="image">
                     <div class="promote_text">Promotion1</div>
                 </div>
-                <div class="promote">
+                <div class="promote2">
                     <img class="promote_image" src="./Task1pic.jpg" alt="image">
                     <div class="promote_text">Promotion2</div>
                 </div>
@@ -98,6 +98,7 @@
                 </div>
             </div>
         </div>
+    </main>
 </body>
 
 </html>
